--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container {
+  margin: 5px 100px 0 100px;
+}
